--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#3692F4</color>
+    <color name="bg_board1">#DAD3C8</color>
+    <color name="bg_board2">#E4A898</color>
+    <color name="bg_board3">#B5F9CF</color>
 </resources>
